Added comments and made improvements in main.py

--- a/AFNT/Application/tests/graphs.ipynb
+++ b/AFNT/Application/tests/graphs.ipynb
@@ -56,11 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('1712447990', 0, '0'), ('1712447995', 0, '0'), ('1712448000', 0, '0'), ('1712448005', 0, '0'), ('1712448010', 0, '0'), ('1712448015', 2, '0'), ('1712448021', 4, '0'), ('1712448026', 4, '0'), ('1712448031', 5, '0'), ('1712448036', 5, '0'), ('1712448041', 5, '0'), ('1712448046', 5, '0'), ('1712448051', 5, '0'), ('1712448056', 5, '0'), ('1712448062', 5, '0'), ('1712448067', 5, '0'), ('1712448072', 6, '0'), ('1712448077', 6, '0'), ('1712448082', 6, '0'), ('1712448087', 6, '0'), ('1712448092', 6, '0')]\n"
+     ]
+    }
+   ],
    "source": [
-    "def step_count_data(self):\n",
+    "def step_count_data():\n",
     "    step_count_list = []\n",
     "    try:\n",
     "        with open(r'F:\\arduino.csv', newline='') as csvfile:\n",
